--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 beautifulsoup4==4.10.0
 Django==2.2.24
 django-bootstrap4==1.1.1
+djangorestframework==3.13.1
 pytz==2021.3
 soupsieve==2.3.1
 sqlparse==0.4.2
