--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.8"
 services:
+  db:
+    image: "postgres:11"
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
   app:
     build: .
     volumes:
@@ -13,4 +19,8 @@ services:
     container_name: django_container
 
     command: python manage.py runserver 0.0.0.0:8000
+    depends_on:
+        - db
 
+volumes:
+  postgres_data:
