--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.8"
 services:
-  db:
-    image: "postgres:11"
-    environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+#  db:
+#    image: "postgres:11"
+#    environment:
+#      - "POSTGRES_HOST_AUTH_METHOD=trust"
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
   app:
     build: .
-    volumes:
-      - ./inno-Doctor:/inno-doctor
+#    volumes:
+#      - ./inno-Doctor:/inno-doctor
     ports:
-      - 8000:8000
+      - 80:8000
     image: inno-dcotor:django
     # environment: 
     #   - EMAIL_HOST_USER  :  ${EMAIL_HOST_USER}
@@ -19,8 +19,8 @@ services:
     container_name: django_container
 
     command: python manage.py runserver 0.0.0.0:8000
-    depends_on:
-        - db
-
-volumes:
-  postgres_data:
+#    depends_on:
+#        - db
+#
+#volumes:
+#  postgres_data:
