--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ../postgres_data:/var/lib/postgresql/data/
   app:
     build: .
     volumes:
