update main yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Django Tests
+name: CI Django Tests[postgres test]
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -13,9 +13,10 @@ jobs:
       postgres_main:
         image: postgres:12
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: djtesting
+#           POSTGRES_USER: postgres
+          POSTGRES_HOST_AUTH_METHOD : trust
+#           POSTGRES_PASSWORD: postgres
+#           POSTGRES_DB: djtesting
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -32,10 +33,6 @@ jobs:
         run: |
           pip install -r requirements.txt
       - name: Run Tests
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: djtesting
-          POSTGRES_PORT: 5432
+#         env:
         run: |
           python manage.py test
