update github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,7 @@ jobs:
       postgres_main:
         image: postgres:12
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: djtesting
+          POSTGRES_HOST_AUTH_METHOD: trust
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -31,11 +29,20 @@ jobs:
       - name: Install requirements
         run: |
           pip install -r requirements.txt
+#      - name: Run Tests
+#        env:
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: postgres
+#          POSTGRES_DB: djtesting
+#          POSTGRES_PORT: 5432
+#        run: |
+#          python manage.py test
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Run Tests
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: djtesting
-          POSTGRES_PORT: 5432
         run: |
-          python manage.py test
+            cd inno-Doctor
+            python manage.py test
