update input parameter in cmd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
 #         env:
         run: |
           cd inno-Doctor
-          python manage.py test
+          python manage.py test --no-input
