update django yaml

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Run Tests
       run: |
         cd inno-Doctor
-        python manage.py test
+        python manage.py test --no-input
