--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+  workflow_dispatch:
 
 jobs:
   build:
@@ -41,23 +41,3 @@ jobs:
         version_label: "InnoDoctor-${{ steps.format-time.outputs.replaced }}"
         region: us-east-1
         deployment_package: innodoctor.zip
-
-
-    -
-      name: Build the Docker image
-      run: docker build -t InnoDoctor .
-
-    -
-      name: tag python app
-      run: docker tag InnoDoctor Shikhar9srj/InnoDoctor
-
-    -
-      name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    -
-      name: push pythonapp
-      run: docker push Shikhar9srj/InnoDoctor
