--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
 asgiref==3.4.1
+async-generator==1.10
 attrs==21.4.0
 beautifulsoup4==4.10.0
 Brotli==1.0.9
+certifi==2021.10.8
 cffi==1.15.0
+cryptography==36.0.1
 cssselect2==0.4.1
 Django==2.2.24
 django-bootstrap4==1.1.1
-django-widget-tweaks
+django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
 factory-boy==3.2.1
 Faker==11.3.0
 fonttools==4.28.5
+h11==0.13.0
+html-testRunner==1.2.1
 html5lib==1.1
+idna==3.3
 importlib-metadata==4.10.1
 iniconfig==1.1.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+outcome==1.1.0
 packaging==21.3
 pdfkit==1.0.0
 Pillow==9.0.0
@@ -22,30 +31,28 @@ psycopg2-binary==2.8.6
 py==1.11.0
 pycparser==2.21
 pydyf==0.1.2
+pyOpenSSL==21.0.0
 pyparsing==3.0.7
 pyphen==0.12.0
 pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
 reportlab==3.6.5
+selenium==4.1.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
 text-unidecode==1.3
 tinycss2==1.1.1
 toml==0.10.2
+trio==0.19.0
+trio-websocket==0.9.2
 typing_extensions==4.0.1
-asgiref==3.4.1
-beautifulsoup4==4.10.0
-Django==2.2.24
-django-bootstrap4==1.1.1
-djangorestframework==3.13.1
-pytz==2021.3
-soupsieve==2.3.1
-sqlparse==0.4.2
-typing_extensions==4.0.1
-django-widget-tweaks==1.4.12
+urllib3==1.26.8
 weasyprint==54.0
 webencodings==0.5.1
+wsproto==1.0.0
 zipp==3.7.0
 zopfli==0.1.9
