--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,20 +55,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    #   # run test cases
-    # - name: Set up Python ${{ matrix.python-version }}
-    #   uses: actions/setup-python@v2
-    #   with:
-    #     python-version: 3.9
-    # - name: Install Dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install -r requirements.txt
-    # - name: Run Tests
-    #   run: |
-    #     export IS_PRODUCTION=False
-    #     cd inno-Doctor
-  #   #     python manage.py test
+      # run test cases
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run Tests
+      run: |
+        export IS_PRODUCTION=False
+        cd inno-Doctor
+        python manage.py test
+
   # - name: Add secrets to Task Definition
   #       uses: actions/checkout@v2
   #         run:|
