--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Django Tests[postgres test]
+name: CI Django Tests(postgres)
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -13,10 +13,10 @@ jobs:
       postgres_main:
         image: postgres:12
         env:
-#           POSTGRES_USER: postgres
           POSTGRES_HOST_AUTH_METHOD : trust
-#           POSTGRES_PASSWORD: postgres
-#           POSTGRES_DB: djtesting
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: db
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup Python 3.9
+      - name: Setup Python 3.8
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
@@ -33,7 +33,7 @@ jobs:
         run: |
           pip install -r requirements.txt
       - name: Run Tests
-#         env:
+        # env:
         run: |
           cd inno-Doctor
           python manage.py test --no-input
